Optimize: use List.of(for-single-arg)